plugins {
    id "com.android.application"
    id "org.jetbrains.kotlin.android"
    id "org.jetbrains.kotlin.plugin.compose"
}

android {
    namespace "app.scalebench.android"
    compileSdk 36

    defaultConfig {
        applicationId "app.scalebench.android"
        minSdk 26
        targetSdk 36
        versionCode 14
        versionName "1.1.1"
    }

    buildFeatures {
        compose true
        buildConfig true
    }

    sourceSets {
        main {
            assets.srcDirs += ["../../shared"]
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    testOptions {
        unitTests.all {
            systemProperty "scalebench.repo.root", rootProject.projectDir.parentFile.absolutePath
        }
    }
}

kotlin {
    jvmToolchain(17)
}

dependencies {
    def composeBom = platform("androidx.compose:compose-bom:2026.06.00")
    implementation composeBom

    implementation "androidx.activity:activity-compose:1.13.0"
    implementation "androidx.core:core-ktx:1.17.0"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.4"
    implementation "androidx.compose.material3:material3"
    implementation "androidx.compose.ui:ui"
    implementation "androidx.compose.ui:ui-tooling-preview"
    implementation "no.nordicsemi.android:ble:2.11.0"
    implementation "no.nordicsemi.android:dfu:2.11.0"
    implementation "no.nordicsemi.android.support.v18:scanner:1.6.0"
    debugImplementation "androidx.compose.ui:ui-tooling"
    testImplementation "junit:junit:4.13.2"
    testImplementation "org.json:json:20240303"
}
